plugins {
    id 'java'
    //id 'application'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.json:json:20220924")
    implementation group: 'it.unimi.dsi', name: 'fastutil', version: '8.5.11'
    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

compileJava {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

/* Might help in future projects?
application {
    mainClass = 'server.DijkstraServer'
}
run {
    standardInput = System.in
}
*/

tasks.register('runDijkstraServer', JavaExec) {
    dependsOn 'classes'
    main= 'server.DijkstraServer'
    classpath = sourceSets.main.runtimeClasspath
}

tasks.register('runTestBenchmark', JavaExec) {
    dependsOn 'classes'
    main= 'execution.Benchmark'
    classpath = sourceSets.main.runtimeClasspath
    standardInput = System.in
}

test {
    useJUnitPlatform()
    // Enable preview features like pattern matching for tests
    jvmArgs(['--enable-preview'])

    testLogging {
        // Sources: https://docs.gradle.org/current/javadoc/org/gradle/api/tasks/testing/logging/TestLoggingContainer.html

        events "passed"
        debug {
            events "started", "skipped", "failed"
            exceptionFormat "full"
        }
        info.events = ["failed", "skipped"]
    }
}
